--- a/modules/imgcodecs/CMakeLists.txt
+++ b/modules/imgcodecs/CMakeLists.txt
@@ -13,6 +13,8 @@ if(HAVE_WINRT_CX AND NOT WINRT)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /ZW")
 endif()
 
+ocv_include_directories(${CMAKE_CURRENT_LIST_DIR}/../core/misc/objc/common/)
+
 if (HAVE_AVIF)
   ocv_include_directories(${AVIF_INCLUDE_DIR})
   list(APPEND GRFMT_LIBS ${AVIF_LIBRARY})
@@ -113,6 +115,9 @@ list(APPEND grfmt_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/rgbe.hpp)
 list(APPEND grfmt_srcs ${CMAKE_CURRENT_LIST_DIR}/src/rgbe.cpp)
 list(APPEND grfmt_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/exif.hpp)
 list(APPEND grfmt_srcs ${CMAKE_CURRENT_LIST_DIR}/src/exif.cpp)
+
+#file(GLOB grfmt_hdrs ${CMAKE_CURRENT_LIST_DIR}/misc/objc/ios/*.h)
+#file(GLOB grfmt_srcs ${CMAKE_CURRENT_LIST_DIR}/misc/objc/ios/*.mm)
 
 source_group("Src\\grfmts" FILES ${grfmt_hdrs} ${grfmt_srcs})
 
