--- a/modules/imgcodecs/CMakeLists.txt
+++ b/modules/imgcodecs/CMakeLists.txt
@@ -107,7 +107,10 @@ if (HAVE_IMGCODEC_PFM)
 endif()
 
 file(GLOB grfmt_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/grfmt*.hpp)
-file(GLOB grfmt_srcs ${CMAKE_CURRENT_LIST_DIR}/src/grfmt*.cpp)
+file(GLOB grfmt_srcs 
+	"${CMAKE_CURRENT_LIST_DIR}/src/grfmt*.cpp"
+	"${CMAKE_CURRENT_LIST_DIR}/../core/misc/objc/common/*.mm"
+)
 
 list(APPEND grfmt_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/bitstrm.hpp)
 list(APPEND grfmt_srcs ${CMAKE_CURRENT_LIST_DIR}/src/bitstrm.cpp)
@@ -115,6 +118,7 @@ list(APPEND grfmt_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/rgbe.hpp)
 list(APPEND grfmt_srcs ${CMAKE_CURRENT_LIST_DIR}/src/rgbe.cpp)
 list(APPEND grfmt_hdrs ${CMAKE_CURRENT_LIST_DIR}/src/exif.hpp)
 list(APPEND grfmt_srcs ${CMAKE_CURRENT_LIST_DIR}/src/exif.cpp)
+list(APPEND grfmt_srcs ${CMAKE_CURRENT_LIST_DIR}/misc/objc/ios/MatConverters.mm)
 
 #file(GLOB grfmt_hdrs ${CMAKE_CURRENT_LIST_DIR}/misc/objc/ios/*.h)
 #file(GLOB grfmt_srcs ${CMAKE_CURRENT_LIST_DIR}/misc/objc/ios/*.mm)
